--- a/src/css/CharacterPage.css
+++ b/src/css/CharacterPage.css
@@ -10,4 +10,10 @@ body{
   flex-direction: row;
   float: right;
   margin-top: auto;
+  border: none;
+}
+
+img{
+  width: 100px;
+  height: 100px;
 }
