--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,13 @@
-/*.App {
-  text-align: center;
+body {
+  background-image: url("images/paper.png");
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.icons {
+  list-style: none;
+  display: inline;
+  flex-direction: row;
+  float: right;
+  margin-top: auto;
+  border: none;
+  vertical-align: top;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}*/
