--- a/src/css/Money.css
+++ b/src/css/Money.css
@@ -1,4 +1,4 @@
-#SkillsForm input{
+#MoneyForm input[type=number]{
   display: inline;
   height: 20px;
   width: 20px;
@@ -7,8 +7,4 @@
   margin: 0 10px 10px 10px;
   border-radius: 30%;
   align-items: center;
-}
-
-.SkillsForm p{
-  text-align: justify;
 }
