--- a/src/css/Money.css
+++ b/src/css/Money.css
@@ -1,10 +1,16 @@
-#MoneyForm input[type=number]{
+input[type=number]{
   display: inline;
   height: 20px;
-  width: 20px;
+  width: 50px;
   background-color: #dbc99d;
   border: none;
   margin: 0 10px 10px 10px;
-  border-radius: 30%;
+  border-radius: 15%;
   align-items: center;
+}
+
+.gold{
+  height: 50px;
+  width: 50px;
+  float: left;
 }
