--- a/src/css/Money.css
+++ b/src/css/Money.css
@@ -4,13 +4,17 @@ input[type=number]{
   width: 50px;
   background-color: #dbc99d;
   border: none;
-  margin: 0 10px 10px 10px;
+  margin: 1em 10px 10px 10px;
   border-radius: 15%;
   align-items: center;
 }
 
-.gold{
+.goldPic{
   height: 50px;
   width: 50px;
   float: left;
+}
+
+.MoneyForm{
+  margin-left: 2em;
 }
